# model-distillation-

./: .gitignore  README.md  pyproject.toml  requirements-colab.txt
.github/workflows/: test.yml
configs/: distillation_config.yaml  finetune_config.yaml
notebooks/: 06_colab_gpu_run.ipynb  07_kaggle_gpu_run.ipynb  colab_finetune_distill.ipynb  kernel-metadata.json
scripts/: build_vector_db.py  evaluate.py  finetune_distill.py  generate_soft_labels.py  infer.py  train_student.py
src/data/: dataset_loader.py  preprocessor.py
src/distillation/: loss.py  trainer.py
src/evaluation/: evaluator.py
src/finetune/: __init__.py  chat.py  config.py  data.py  distill.py  model.py  train.py
src/rag/: chroma_store.py  embedder.py  retriever.py
src/student/: student_model.py
src/teacher/: rag_teacher.py  teacher_model.py
tests/: test_distillation.py  test_evaluation.py  test_finetune.py  test_rag.py  test_smoke_e2e.py
