[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-augmented-distillation"
version = "0.1.0"
description = "Distill a RAG pipeline into a standalone model — no retrieval needed at inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "sentence-transformers>=2.7.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "nltk>=3.8.0",
    "tqdm>=4.66.0",
    "evaluate>=0.4.0",
    "accelerate>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "plotly>=5.20.0",
    "ipywidgets>=8.0.0",
]
ollama = [
    "ollama>=0.1.8",
]
finetune = [
    "peft>=0.11.0",
    "bitsandbytes>=0.43.0",   # 4-bit QLoRA (CUDA); auto-skipped on CPU-only boxes
    "sentencepiece>=0.2.0",
    "openai>=1.30.0",         # OpenAI-compatible client for the NVIDIA NIM teacher
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that load HuggingFace models (deselect with '-m not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
